2006-09-26  Mickael Remond  <mickael.remond@process-one.net>

	* src/mod_muc/mod_muc_room.erl: Minor english update.
	* src/msgs/pl.msg: Likewise.
	* src/msgs/uk.msg: Likewise.
	* src/msgs/pt-br.msg: Likewise.
	* src/msgs/cs.msg: Likewise.
	* src/msgs/ru.msg: Likewise.
	* src/msgs/es.msg: Likewise.
	* src/msgs/fr.msg: Likewise.
	* src/msgs/de.msg: Likewise.
	* src/msgs/nl.msg: Likewise.

	* src/msgs/pt-br.msg: Updated Brazilian translation (thanks to
	Renato Botelho) and clean-up.

2006-09-25  Mickael Remond  <mickael.remond@process-one.net>

	* src/msgs/de.msg: Updated German translation (thanks to Nikolaus
	Polak).

	* src/ejabberd.app: Version update for ejabberd 1.1.2.

	* src/msgs/pl.msg: Updated Polish translation (thanks to Zbyszek
	Zolkiewski).

	* src/msgs/de.msg: Updated German translation (thanks to Marvin
	Preuss).

	* src/msgs/nl.msg: Updated Dutch translation (thanks to Sander
	 Devrieze).

	* src/msgs/cs.msg: Updated Czech translation and removed unused
	 strings.

	* doc/introduction.tex: Minor doc updates for release 1.1.2.

2006-09-24  Mickael Remond  <mickael.remond@process-one.net>

	* src/msgs/es.msg: Updated Spanish translation (thanks to Badlop).

	* src/mod_muc/mod_muc_room.erl: Strings update (thanks to Serguei
	 Golovan).
	* src/msgs/ru.msg: Updated Russian translation (thanks to Serguei
	 Golovan).
	* src/msgs/uk.msg: Updated Ukrainian translation (thanks to Serguei
	 Golovan).
	* src/msgs/fr.msg: Updated French translation.
	
	* src/doc/guide.html: Minor W3C compliance fix in an Hevea
	generated URL.
	
	* src/doc/features.html: Added to be consistent (guide.html is in the
	repository to make Latex optional, but still allow access to the doc).

2006-09-23  Mickael Remond  <mickael.remond@process-one.net>

        * src/ejabberd.hrl: Updated to version 1.1.2

2006-09-23  Alexey Shchepin  <alexey@sevcom.net>

	* src/eldap/eldap.erl: Enable the keepalive socket option (thanks
	to Evgeniy Khramtsov)
