@@ -1,5 +1,8 @@
 2006-09-26  Mickael Remond  <mickael.remond@process-one.net>
 
+	* src/ejabberd_s2s.erl: Added incoming-s2s-number and
+	outgoing-s2s-number ejabberdctl commands
+	
 	* src/mod_muc/mod_muc_room.erl: Minor english update.
 	* src/msgs/pl.msg: Likewise.
 	* src/msgs/uk.msg: Likewise.
